--- a/www/partials/Register.html
+++ b/www/partials/Register.html
@@ -1,6 +1,6 @@
 
 
-<div class="list row back-color" ng-app="dropped" >
+<div class="list row back-color">
 	<form class="col col-center" ng-controller="registerUser" ng-submit="register(authorizationForm)" name="authorizationForm" novalidate form-manager>
 
 
