--- a/www/css/style.css
+++ b/www/css/style.css
@@ -30,6 +30,7 @@
 }
 .item-center{
     text-align: center;
+    background: transparent;
 }
 
 .item{
@@ -51,11 +52,7 @@
             position: relative;
             width: 100%;
         }
-        .map {
-             height: 5000px;
-            position: relative;
-            width: 30%;
-        }
+   
 .size{
     width: 100%;
     height : 500px;
@@ -101,9 +98,6 @@
 .no-errors {
     border-bottom: 3px solid green;
 }
-.back-color {
-    background-color: white;
-}
 
 .scroll-pane {
         background: url(../img/abc.jpg) no-repeat center center fixed; 
@@ -122,3 +116,35 @@ z-index: -3;
     }
   
 
+ul.rating li {
+  display: inline;
+  border: 0px;
+  background:none;
+  padding: 50px 3px;
+  color:#E9C639;
+}
+ul.rating li i {
+  font-size: 30px;
+  font-color:blue;
+}
+.details{
+    color:#E3DAC9; 
+  font-family:  cursive;
+    font-weight: 900;
+text-align: center;
+font-size: 15px; 
+}
+.logo{
+    color:#E3DAC9; 
+  font-family:'Pacifico',cursive;
+    font-weight: 900;
+text-align: center;
+font-size: 15px; 
+}
+ .about{
+    color:#E3DAC9; 
+    font-family: cursive;
+    text-align: center;
+    font-weight: 900;
+font-size: 20px;
+}
