--- a/www/partials/Single_Shop.html
+++ b/www/partials/Single_Shop.html
@@ -8,19 +8,21 @@
       
     
   </ion-header-bar>
-  <ion-content class="scroll-ag">
+  <ion-content class="scroll-ag item-center" >
+<ion-refresher
+    pulling-text="Pull to refresh..."
+    on-refresh="doRefresh()">
+  </ion-refresher>
+		
+					<div class="item ">
 
-		<div class="list card item-center" >
-
-			<div class="item  ">
-
-
+			<rating ng-model="shopRate" max="data.max" readonly="readOnly" ></rating>
 				<h1>{{product.shopName}}</h1>
 
 			</div>
 
 
-			<div class="item item-body  ">
+			<div class="item item-body ">
 				<img class="" ng-src={{product.shopCover}}>
 
 			</div>
@@ -28,34 +30,43 @@
 			<div class="item  tabs-secondary tabs-icon-left">
 				<p>{{product.shopArea}}</p>
 				<p>{{product.shopAddr}}</p>
-				<label class="item item-input">
-					
+				<div class="item">
+			  <rating ng-model="data.rating" max="data.max" ></rating>
+		
+
+				
 					<textarea rows="4" cols="50" name="review" ng-model="review" placeholder="Your Review Please ....">
 						</textarea>
-				</label>
-				<button class="button button-large button-block button-royal" style="font-size:20px" ng-click="SendDetails(product,review)">
-					<i class="ion-eye" style="font-size:35px">&nbsp;</i>Add A Review
+			
+				</div>
+				<button class="button button-large button-block button-royal" style="font-size:20px" ng-click="SendDetails(product,review,data.rating)">
+					<i class="ion-eye" style="font-size:35px">&nbsp;</i>Rate It !!
 				</button>
 		
 	
 			<div class="item" ng-repeat="Review in Reviews" >
 				<h3>{{Review.name}}</h3>
 				<p style="font-size:10px"><i>{{Review.date}}</i></p>
+				<rating ng-model="Review.rate" max="data.max" readonly="readOnly" ></rating>
+			</br>
+		</br>
 				<p>{{Review.review}}</p>
 			</div>
 
 		</div>
-	</div>
+	
   </ion-content>
       </ion-side-menu-content>
           <ion-side-menu side="left">
 
     <ion-list >
-     <a  ng-click="hello()" ng-href="/#/home"> <ion-item nav-clear menu-toggle>  <h3> Home <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item></a>
-        <a ng-click="hello()" ng-href="/#/userReviews" > <ion-item nav-clear menu-toggle>  <h3>  Your Reviews <i class="ion-eye" style="font-size:25px"></i> </h3></ion-item></a>
-      <ion-item nav-clear menu-toggle>  <h3>  Recommended Shops<i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
-      <ion-item nav-clear menu-toggle>  <h3>  About Us<i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
-            <ion-item nav-clear menu-toggle>  <h3>  Logout<i class="ion-eye" style="font-size:25px"></i> </h3></ion-item>
+    <a  ng-click="hello()" ng-href="/#/home" style="text-decoration: none;" target="_self"> <ion-item nav-clear menu-toggle> <h3> <i class="ion-home" style="font-size:25px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Home  </h3></ion-item></a>
+        <a ng-click="hello()" ng-href="/#/userReviews" style="text-decoration: none;" target="_self"> <ion-item nav-clear menu-toggle>  <h3> <i class="ion-edit" style="font-size:25px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Your Reviews  </h3></ion-item></a>
+    <a  ng-click="hello()" ng-href="/#/about" style="text-decoration: none;" target="_self">  <ion-item nav-clear menu-toggle>  <h3> <i class="ion-information-circled" style="font-size:25px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; About Us</h3></ion-item></a>
+          <a  ng-click="hello()" ng-href="/#/" style="text-decoration: none;" target="_self">  <ion-item nav-clear menu-toggle>  <h3><i class="ion-power" style="font-size:25px"></i> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Logout </h3></ion-item></a>
+
+
+
          </ion-list>
     </ion-side-menu>
   </ion-side-menus>
