--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,47 +1,43 @@
-
-
-	  <ion-side-menus>
+<ion-side-menus >
     <ion-side-menu-content>
   <ion-pane >
-
- <ion-header-bar class="bar bar-header bar-dark">
+  <ion-header-bar class="bar bar-header bar-dark">
     <button menu-toggle="left" class="button button-icon icon ion-navicon-round" ng-click="toggleLeft"> </button>
-  <h1 class="title" style=" font-size:25px; ">Search It !!</h1>
+        
+        <h1 class="title" style=" font-size:25px; ">Search It !!</h1>
       
-     
     
   </ion-header-bar>
-  <ion-header-bar class="bar-subheader bar-dark">
-  <h1 class="title">Your Reviews</h1>
-  </ion-header-bar>
-
-<ion-content class="scroll-bg">
-<ion-refresher
+  <ion-content class="scroll-pane">
+    <ion-refresher
     pulling-text="Pull to refresh..."
     on-refresh="doRefresh()">
   </ion-refresher>
- <div ng-show="This">
-  <h2 style="text-align:center"> You have Added No Reviews Yet !! </h2>
- </div>
-		<div class="list">
-  <div class="item" ng-repeat="Review in Reviews" >
-    <a class="item item-avatar" ng-click="hello()" ng-href='/#/details/{{Review.sid}}'>
 
-        <h3>{{Review.name}}</h3>
-        <p style="font-size:10px"><i>{{Review.date}}</i></p>
-        <p>{{Review.review}}</p>
-        <rating ng-model="Review.rate" max="data.max" readonly="readOnly" align="right"></rating>
-        </a>
-      </div>
+  <div>
+    <h4 class="about"  >ABOUT</h4>
 
-		</div>
-	</ion-content>
+  <h5 class="details">Searchit helps you to discover where your searched product will be available nearby you. </h5>
+</br>
+  </br>
+</br></br>
+  <h4 class="about">What's so Special about <strong>SEARCH IT </strong>?</h4>
+  <h5 class="details"  >It helps you to find local shops which are not available on internet because we want to ensure maximum results for our users.</h5>
+</br> </br>
+  <h4 class="about"><strong>DEVELOPERS</strong></h4>
+</br>
+</br>
+</br>
+</br>
+   <h5 class="details">SEARCHIT  is Developed by Team <SPAN class="logo">F9</SPAN>. </h5>
+  </div>
 
-
-</ion-pane>
-    
-    </ion-side-menu-content>
-        <ion-side-menu side="left">
+  </ion-content>
+   <ion-footer-bar class="bar-dark">
+          <h1 class="title" style=" font-size:25px; ">F9</h1>
+    </ion-footer-bar>
+      </ion-side-menu-content>
+          <ion-side-menu side="left">
 
     <ion-list >
     <a  ng-click="hello()" ng-href="/#/home" style="text-decoration: none;" target="_self"> <ion-item nav-clear menu-toggle> <h3> <i class="ion-home" style="font-size:25px"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Home  </h3></ion-item></a>
@@ -50,6 +46,11 @@
           <a  ng-click="hello()" ng-href="/#/" style="text-decoration: none;" target="_self">  <ion-item nav-clear menu-toggle>  <h3><i class="ion-power" style="font-size:25px"></i> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Logout </h3></ion-item></a>
 
 
+
          </ion-list>
     </ion-side-menu>
   </ion-side-menus>
+
+
+
+
